--- a/index.html
+++ b/index.html
@@ -375,15 +375,15 @@
                     Comic
                 </h2>
                 <form id="email-form" class="comic__form flex">
-                    <label for="email">Enter your Innopolis email:</label>
+                    <label>Enter your Innopolis email:</label>
                     <div>
                         <input type="email" id="comic-email" name="email" placeholder="Ex: v.toporkov@innopolis.university" required>
                         <button type="submit" class="btn-reset">Get comic</button>
                     </div>
                 </form>
                 <div id="comic-container" class="comic__container none">
-                    <h3 id="comic-title" class="comic__container-title"></h3>
-                    <img id="comic-image" class="comic__container-image" src="" alt="wait">
+                    <h3 id="comic-title" class="comic__container-title">Title</h3>
+                    <img id="comic-image" class="comic__container-image" src="..." alt="wait">
                     <p id="comic-date" class="comic__container-date"></p>
                 </div>
             </div>
