defer deleted in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script defer src="https://cdn.jsdelivr.net/npm/choices.js@9.0.1/public/assets/scripts/choices.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script defer src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-        <script defer src="scripts/bundle.js"></script>
+        <script src="scripts/bundle.js"></script>
         <title>Portfolio</title>
     </head>
 <body>
