--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script defer src="https://cdn.jsdelivr.net/npm/choices.js@9.0.1/public/assets/scripts/choices.min.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script defer src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.7/dayjs.min.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.7/plugin/relativeTime.min.js"></script>
         <script src="scripts/bundle.js"></script>
         <title>Portfolio</title>
     </head>
